// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdditionalInformationSection component should render default view 1`] = `
<Section
  cards={
    Object {
      "current": Array [
        Object {
          "groups": Array [
            Array [
              "collections",
            ],
            Array [
              "rek_subtype",
            ],
            Array [
              "additionalNotes",
            ],
            Array [
              "fez_record_search_key_herdc_code",
              "fez_record_search_key_herdc_status",
              "fez_record_search_key_institutional_status",
            ],
            Array [
              "contentIndicators",
              "fez_record_search_key_oa_status",
            ],
          ],
          "title": "Additional information",
        },
      ],
    }
  }
  disabled={false}
/>
`;

exports[`AdditionalInformationSection component should render disabled view 1`] = `
<Section
  cards={
    Object {
      "current": Array [
        Object {
          "groups": Array [
            Array [
              "collections",
            ],
            Array [
              "rek_subtype",
            ],
            Array [
              "additionalNotes",
            ],
            Array [
              "fez_record_search_key_herdc_code",
              "fez_record_search_key_herdc_status",
              "fez_record_search_key_institutional_status",
            ],
            Array [
              "contentIndicators",
              "fez_record_search_key_oa_status",
            ],
          ],
          "title": "Additional information",
        },
      ],
    }
  }
  disabled={true}
/>
`;
